tests/compile-fail/integration__integration__std_features__bad_object_name.snap
---
source: tests/integration/std_features.rs
expression: stderr
---
error: no object named blarb
   ┌─ <input>:31:9
   │
31 │         blarb {pos: [-192.0, 6344.0, 0.0]},
   │         ^^^^^ not an object


